--- a/_config.yml
+++ b/_config.yml
@@ -18,27 +18,27 @@
 ##############################
 text_skin: default # "default" (default), "dark", "forest", "ocean", "chocolate", "orange"
 highlight_theme: default # "default" (default), "tomorrow", "tomorrow-night", "tomorrow-night-eighties", "tomorrow-night-blue", "tomorrow-night-bright"
-url     : # the base hostname & protocol for your site e.g. https://www.someone.com
-baseurl : # does not include hostname
-title   : Your Site Title
+url     : "https://hoonjanglee.github.io"
+baseurl : "/"
+title   : 훈장리
 description: > # this means to ignore newlines until "Language & timezone"
-  Your Site Description
+  공부하기 싫다
 
 
 ## => Language and Timezone
 ##############################
-lang: # the language of your site, default as "en"
-timezone: # see https://en.wikipedia.org/wiki/List_of_tz_database_time_zones for the available values
+lang: ko
+timezone: Asia/Seoul
 
 
 ## => Author and Social
 ##############################
 author:
   type      : # "person" (default), "organization"
-  name      : Your Name
-  url       :
+  name      : 훈장리
+  url       : "https://hoonjanglee.github.io"
   avatar    : # path or url of avatar image (square)
-  bio       : I am an amazing person.
+  bio       : I am an OMG person.
   email     :
   facebook  : # "user_name" the last part of your profile url, e.g. https://www.facebook.com/user_name
   twitter   : # "user_name" the last part of your profile url, e.g. https://twitter.com/user_name
@@ -55,8 +55,8 @@ author:
 
 ## => GitHub Repository (if the site is hosted by GitHub)
 ##############################
-repository: user_name/repo_name
-repository_tree: master
+repository: hoonjanglee/hoonjanglee.github.io
+repository_tree: main
 
 
 ## => Paths
